--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="login_button_text_login">Login</string>
     <string name="signup_link_login">Don\'t have an account? Signup</string>
     <string name="forgot_password_link_login">Forgot Password?</string>
+    <string name="login_title_text">Login</string>
+
+
+    <string name="signup_title_text">Signup</string>
+    <string name="signup_button_text_signup">Signup</string>
+    <string name="login_link_signup">Already have an account? Login</string>
+
+    <string name="email_hint_signup">Email</string>
+    <string name="password_hint_signup">Password</string>
+    <string name="name_hint_signup">Name</string>
 </resources>
