--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Hackathon</string>
 
+    <string name="server">192.168.0.104</string>
+
     <!--    Splash Screen Text-->
     <string name="splash_text">Tracking\nSystem</string>
 
